# EncodeHelper

./: CMakeLists.txt  README.md  encoder.cpp  encoder.h  encoder.spec  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qencoder.cpp  qencoder.h
encoder/: encoder.py
